# Meson

./: README.md
Primer01/: Pozdrav.c  meson.build
Primer01/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  imi_pozdrav
Primer01/builddir/meson-info/: intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
Primer01/builddir/meson-logs/: meson-log.txt
Primer01/builddir/meson-private/: coredata.dat.prev
Primer02/: Pozdrav.c  meson.build
Primer02/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  imi_pozdrav
Primer02/builddir/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-targets.json  intro-tests.json  meson-info.json
Primer02/builddir/meson-logs/: meson-log.txt
Primer02/builddir/meson-private/: coredata.dat.prev
Primer03/: funkcija.c  meson.build  program.c
Primer03/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  program
Primer03/builddir/meson-info/: intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
Primer03/builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
Primer03/builddir/meson-private/: coredata.dat.prev
Primer03/builddir/pozdrav@sha/: libpozdrav.so.symbols
Primer04/: meson.build
Primer04/builddir/: build.ninja
Primer04/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  meson-info.json
Primer04/builddir/meson-logs/: meson-log.txt
